--- a/organic-search-google-landing.ipynb
+++ b/organic-search-google-landing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -52,21 +52,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>/mens-c4/leather-jackets-c25</td>\n",
-       "      <td>14538</td>\n",
-       "      <td>1432944</td>\n",
-       "      <td>0.010146</td>\n",
-       "      <td>17.926221</td>\n",
-       "      <td>12049</td>\n",
-       "      <td>9659</td>\n",
-       "      <td>0.730028</td>\n",
-       "      <td>83.073865</td>\n",
-       "      <td>122563</td>\n",
-       "      <td>53</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>/ladies-c3/leather-jackets-c9</td>\n",
        "      <td>12645</td>\n",
@@ -82,18 +67,18 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>/</td>\n",
-       "      <td>11850</td>\n",
-       "      <td>312828</td>\n",
-       "      <td>0.037880</td>\n",
-       "      <td>19.710234</td>\n",
-       "      <td>10067</td>\n",
-       "      <td>8165</td>\n",
-       "      <td>0.539835</td>\n",
-       "      <td>113.636237</td>\n",
-       "      <td>161643</td>\n",
-       "      <td>134</td>\n",
+       "      <th>0</th>\n",
+       "      <td>/mens-c4/leather-jackets-c25</td>\n",
+       "      <td>14538</td>\n",
+       "      <td>1432944</td>\n",
+       "      <td>0.010146</td>\n",
+       "      <td>17.926221</td>\n",
+       "      <td>12049</td>\n",
+       "      <td>9659</td>\n",
+       "      <td>0.730028</td>\n",
+       "      <td>83.073865</td>\n",
+       "      <td>122563</td>\n",
+       "      <td>53</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -112,18 +97,33 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>/ladies-c3/sheepskin-jackets-c11</td>\n",
-       "      <td>5500</td>\n",
-       "      <td>382640</td>\n",
-       "      <td>0.014374</td>\n",
-       "      <td>13.121613</td>\n",
-       "      <td>4058</td>\n",
-       "      <td>3263</td>\n",
-       "      <td>0.757956</td>\n",
-       "      <td>88.135781</td>\n",
-       "      <td>45401</td>\n",
-       "      <td>9</td>\n",
+       "      <th>8</th>\n",
+       "      <td>/mens-c4/man-bags-briefcases-c12</td>\n",
+       "      <td>3842</td>\n",
+       "      <td>595419</td>\n",
+       "      <td>0.006453</td>\n",
+       "      <td>29.621930</td>\n",
+       "      <td>3114</td>\n",
+       "      <td>2467</td>\n",
+       "      <td>0.764961</td>\n",
+       "      <td>78.113038</td>\n",
+       "      <td>30396</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>/mens-c4/leather-jackets-c25/bomber-styles-c99</td>\n",
+       "      <td>875</td>\n",
+       "      <td>570461</td>\n",
+       "      <td>0.001534</td>\n",
+       "      <td>19.681959</td>\n",
+       "      <td>729</td>\n",
+       "      <td>581</td>\n",
+       "      <td>0.751617</td>\n",
+       "      <td>63.196159</td>\n",
+       "      <td>6848</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -131,62 +131,93 @@
        "</div>"
       ],
       "text/plain": [
-       "        Landing page + query string  Organic Google Search clicks  \\\n",
-       "0      /mens-c4/leather-jackets-c25                         14538   \n",
-       "1     /ladies-c3/leather-jackets-c9                         12645   \n",
-       "2                                 /                         11850   \n",
-       "3                      /handbags-c6                          6875   \n",
-       "4  /ladies-c3/sheepskin-jackets-c11                          5500   \n",
+       "                       Landing page + query string  \\\n",
+       "1                    /ladies-c3/leather-jackets-c9   \n",
+       "0                     /mens-c4/leather-jackets-c25   \n",
+       "3                                     /handbags-c6   \n",
+       "8                 /mens-c4/man-bags-briefcases-c12   \n",
+       "28  /mens-c4/leather-jackets-c25/bomber-styles-c99   \n",
        "\n",
-       "   Organic Google Search impressions  \\\n",
-       "0                            1432944   \n",
-       "1                            1674452   \n",
-       "2                             312828   \n",
-       "3                             720606   \n",
-       "4                             382640   \n",
+       "    Organic Google Search clicks  Organic Google Search impressions  \\\n",
+       "1                          12645                            1674452   \n",
+       "0                          14538                            1432944   \n",
+       "3                           6875                             720606   \n",
+       "8                           3842                             595419   \n",
+       "28                           875                             570461   \n",
        "\n",
-       "   Organic Google Search click through rate  \\\n",
-       "0                                  0.010146   \n",
-       "1                                  0.007552   \n",
-       "2                                  0.037880   \n",
-       "3                                  0.009541   \n",
-       "4                                  0.014374   \n",
+       "    Organic Google Search click through rate  \\\n",
+       "1                                   0.007552   \n",
+       "0                                   0.010146   \n",
+       "3                                   0.009541   \n",
+       "8                                   0.006453   \n",
+       "28                                  0.001534   \n",
        "\n",
-       "   Organic Google Search average position  Users  Engaged sessions  \\\n",
-       "0                               17.926221  12049              9659   \n",
-       "1                               18.219285  10650              8563   \n",
-       "2                               19.710234  10067              8165   \n",
-       "3                               23.129165   5421              4468   \n",
-       "4                               13.121613   4058              3263   \n",
+       "    Organic Google Search average position  Users  Engaged sessions  \\\n",
+       "1                                18.219285  10650              8563   \n",
+       "0                                17.926221  12049              9659   \n",
+       "3                                23.129165   5421              4468   \n",
+       "8                                29.621930   3114              2467   \n",
+       "28                               19.681959    729               581   \n",
        "\n",
-       "   Engagement rate  Average engagement time  Event count  Key events  \\\n",
-       "0         0.730028                83.073865       122563          53   \n",
-       "1         0.744738                95.135962       127961          61   \n",
-       "2         0.539835               113.636237       161643         134   \n",
-       "3         0.750294                90.381295        58332          31   \n",
-       "4         0.757956                88.135781        45401           9   \n",
+       "    Engagement rate  Average engagement time  Event count  Key events  \\\n",
+       "1          0.744738                95.135962       127961          61   \n",
+       "0          0.730028                83.073865       122563          53   \n",
+       "3          0.750294                90.381295        58332          31   \n",
+       "8          0.764961                78.113038        30396          13   \n",
+       "28         0.751617                63.196159         6848           2   \n",
        "\n",
-       "   Ad revenue  \n",
-       "0           0  \n",
-       "1           0  \n",
-       "2           0  \n",
-       "3           0  \n",
-       "4           0  "
+       "    Ad revenue  \n",
+       "1            0  \n",
+       "0            0  \n",
+       "3            0  \n",
+       "8            0  \n",
+       "28           0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('OrganicSearchLandingPage-12Months.csv', skiprows=9)\n",
+    "# df = df[:200]\n",
+    "df = df.sort_values(by='Organic Google Search impressions', ascending=False)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "list_colours = []\n",
+    "for name, hex in matplotlib.colors.cnames.items():\n",
+    "    name = name.title()\n",
+    "    list_colours.append(name)\n",
+    "\n",
+    "# list_colours = []\n",
+    "colours_df = pd.read_csv('colours.csv')\n",
+    "colours_df['colours'] = colours_df['colours'].str.strip()\n",
+    "for j in colours_df['colours'].unique().tolist():\n",
+    "    list_colours.append(j)\n",
+    "\n",
+    "for i in list_colours:\n",
+    "    i = i.title()\n",
+    "\n",
+    "list_colours = list(dict.fromkeys(list_colours))\n",
+    "\n",
+    "df['Colour'] = df['Landing page + query string'].str.findall(r'(?i)\\b(?:{})\\b'.format('|'.join(list_colours))).apply(', '.join)\n",
+    "\n",
+    "df2 = df['Colour'].str.split(',', expand=True)\n",
+    "df['Colour'] = df2[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +226,7 @@
        "(127497, 1035)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -219,15 +250,15 @@
        "c     243\n",
        "0     196\n",
        "     ... \n",
-       "D       2\n",
-       "T       1\n",
-       "H       1\n",
-       "S       1\n",
+       "k       2\n",
        "6       1\n",
+       "T       1\n",
+       "S       1\n",
+       "H       1\n",
        "Name: count, Length: 64, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,57 +271,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_15636\\3750898676.py:4: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_15636\\3750898676.py:5: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "cat_df = df[df['fPageType'] == 'c']\n",
     "prod_df = df[df['fPageType'] == 'p']\n",
-    "# other_cat_df = df[(df['fPageType'] != 'p') & (df['fPageType'] != 'c')]\n",
-    "# other_cat_df['PageType'] = other_cat_df['Landing page + query string'].str.split('-').str[-2]\n",
-    "# other_cat_df['fPageType'] = other_cat_df['PageType'].astype(str).str[0]\n",
-    "# other_cat_df = other_cat_df[other_cat_df['fPageType'] == 'c']\n",
-    "# cat_df = pd.concat([cat_df, other_cat_df], ignore_index=True)"
+    "other_cat_df = df[(df['fPageType'] != 'p') & (df['fPageType'] != 'c')]\n",
+    "other_cat_df['PageType'] = other_cat_df['Landing page + query string'].str.split('-').str[-2]\n",
+    "other_cat_df['fPageType'] = other_cat_df['PageType'].astype(str).str[0]\n",
+    "other_cat_df = other_cat_df[other_cat_df['fPageType'] == 'c']\n",
+    "cat_df = pd.concat([cat_df, other_cat_df], ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(243, 62743, 460)"
+       "['/mens-c4/leather-jackets-c25/leather-jacket-tan-edinburgh-p234',\n",
+       " '/mens-c4/leather-jackets-c25/blazer-styles-c98/two-button-leather-blazer-tan-vito-p3824',\n",
+       " '/mens-c4/leather-jackets-c25/leather-bomber-jacket-tan-danny-p950',\n",
+       " '/mens-c4/leather-jackets-c25/biker-styles-c97/vegetable-tanned-leather-biker-jacket-tan-mcqueen-p2295',\n",
+       " '/mens-c4/leather-jackets-c25/three-button-leather-blazer-tan-malone-p1087',\n",
+       " '/mens-c4/leather-jackets-c25/bomber-styles-c99/vintage-leather-bomber-jacket-tan-le-mans-p3706',\n",
+       " '/mens-c4/leather-jackets-c25/leather-biker-jacket-tan-bronx-p1042',\n",
+       " '/mens-c4/leather-jackets-c25/leather-coat-tan-brontes-p1043',\n",
+       " '/mens-c4/leather-jackets-c25/two-button-leather-blazer-tan-capone-p1085',\n",
+       " '/mens-c4/leather-jackets-c25/bomber-styles-c99/leather-pilot-bomber-jacket-tan-london-p3689',\n",
+       " '/mens-c4/leather-jackets-c25/biker-styles-c97/leather-vintage-biker-jacket-tan-stedman-p3702',\n",
+       " '/mens-c4/leather-jackets-c25/biker-styles-c97/biker-leather-jacket-tan-baron-p3697']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(cat_df), cat_df['Engaged sessions'].sum(), cat_df['Key events'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2702, 25373, 251)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(prod_df), prod_df['Engaged sessions'].sum(), prod_df['Key events'].sum()"
+    "list(prod_df[(prod_df['Landing page + query string'].str.contains('mens-c4/leather-jackets-c25/')) & (prod_df['Colour'] == 'tan')]['Landing page + query string'])"
    ]
   },
   {
