--- a/print_format copy.ipynb
+++ b/print_format copy.ipynb
@@ -1316,6 +1316,154 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Landing page</th>\n",
+       "      <th>Sessions</th>\n",
+       "      <th>Users</th>\n",
+       "      <th>New users</th>\n",
+       "      <th>Engagement rate</th>\n",
+       "      <th>Average engagement time per session</th>\n",
+       "      <th>Key events</th>\n",
+       "      <th>Total revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>/</td>\n",
+       "      <td>114375</td>\n",
+       "      <td>89399</td>\n",
+       "      <td>75738</td>\n",
+       "      <td>0.462461</td>\n",
+       "      <td>59.327204</td>\n",
+       "      <td>974</td>\n",
+       "      <td>119349.020858</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>/mens-c4/leather-jackets-c25</td>\n",
+       "      <td>39416</td>\n",
+       "      <td>34963</td>\n",
+       "      <td>30472</td>\n",
+       "      <td>0.685813</td>\n",
+       "      <td>86.126700</td>\n",
+       "      <td>200</td>\n",
+       "      <td>25404.586747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>/handbags-c6</td>\n",
+       "      <td>32851</td>\n",
+       "      <td>30592</td>\n",
+       "      <td>27460</td>\n",
+       "      <td>0.670725</td>\n",
+       "      <td>76.416000</td>\n",
+       "      <td>173</td>\n",
+       "      <td>11978.589675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>/ladies-c3/leather-jackets-c9</td>\n",
+       "      <td>26010</td>\n",
+       "      <td>23248</td>\n",
+       "      <td>19614</td>\n",
+       "      <td>0.680431</td>\n",
+       "      <td>97.795694</td>\n",
+       "      <td>176</td>\n",
+       "      <td>22229.641387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>/ladies-c3/fur-coats-c77/mink-coat-brown-imola...</td>\n",
+       "      <td>12185</td>\n",
+       "      <td>10694</td>\n",
+       "      <td>9955</td>\n",
+       "      <td>0.336479</td>\n",
+       "      <td>13.290931</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        Landing page  Sessions  Users  \\\n",
+       "0                                                  /    114375  89399   \n",
+       "1                       /mens-c4/leather-jackets-c25     39416  34963   \n",
+       "2                                       /handbags-c6     32851  30592   \n",
+       "3                      /ladies-c3/leather-jackets-c9     26010  23248   \n",
+       "4  /ladies-c3/fur-coats-c77/mink-coat-brown-imola...     12185  10694   \n",
+       "\n",
+       "   New users  Engagement rate  Average engagement time per session  \\\n",
+       "0      75738         0.462461                            59.327204   \n",
+       "1      30472         0.685813                            86.126700   \n",
+       "2      27460         0.670725                            76.416000   \n",
+       "3      19614         0.680431                            97.795694   \n",
+       "4       9955         0.336479                            13.290931   \n",
+       "\n",
+       "   Key events  Total revenue  \n",
+       "0         974  119349.020858  \n",
+       "1         200   25404.586747  \n",
+       "2         173   11978.589675  \n",
+       "3         176   22229.641387  \n",
+       "4           0       0.000000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('AllTraffic Langing page report - 2023.csv', skiprows=9)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.round(2)\n",
+    "df.to_csv(\"AllTraffic Langing page report - 2023.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
