--- a/print_format.ipynb
+++ b/print_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,23 +69,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
     "d1, d2 = '2024-02-01', '2024-02-29'\n",
     "month_abb = 'Feb'\n",
-    "channel = 'Leather Company'"
+    "channel = 'Debenhams'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[(df['date'] >= d1) & (df['date'] <= d2)]\n",
+    "# df = df[(df['date'] >= d1) & (df['date'] <= d2)]\n",
     "df = df[df['Channel'] == channel]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Ashwood Zip Top Leather Cross Body Bag Panna Cotta: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Powder Pink: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Orange: SB Buckle',\n",
+       " \"Women's Medium Leather Wallet Purse Mandarin: S3\",\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Bag Olive: 64033',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Yellow: SB Buckle',\n",
+       " \"'XSpirit' Leather Crossbody Bag Bordeaux: 63033/CB4\",\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Orange: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Camel: SB Buckle',\n",
+       " '14 Card RFID Protected XL Leather Purse Denim Blue: S2',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Aubergine: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Black: PH-2',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Grey: PH-2',\n",
+       " 'Ashwood Saffiano Leather Tote Handbag Black: 62646 S',\n",
+       " \"'XSpirit' Leather Crossbody Bag Black: 63033/CB4\",\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Grey: PH-2',\n",
+       " 'Rosea Flap Over Croc Print Real Leather Shoulder Bag Brandy/croc: MC6',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Lily Pad: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Brown: PH-2',\n",
+       " \"Women's Medium Leather Wallet Purse Two Tone Tan: S3\",\n",
+       " 'Ashwood Leather Crossbody Bag Olive: 64033',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Blue: SB Buckle',\n",
+       " 'Tab Small Zip Top Leather Cross Body Bag Navy/Croc',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Cognac: PH-2',\n",
+       " \"Men's RFID Leather Gift Set French Nappa brown: Pilgrim\",\n",
+       " 'Leather Three Section Cross Body Bag Tan: 63789',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Brown: PH-2',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Bag Khaki: 64033',\n",
+       " '6 Card RFID Protected Zip Around Leather Purse Mandarin: S-5',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Brown: PH-2',\n",
+       " 'Ashwood Leather Crossbody Bag Black: CB-5',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Borduex: SB Buckle',\n",
+       " 'Three Section Leather Shoulder Bag Black: 62394',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Bordeaux: PH-2',\n",
+       " 'Ashwood Leather Crossbody Bag Bordeaux: CB-5',\n",
+       " 'Ashwood Leather Crossbody Bag Navy: CB-5',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Red: PH-2',\n",
+       " \"Men's RFID Leather Gift Set Miller Brown: Pilgrim\",\n",
+       " \"Men's RFID Leather Gift Set Miller Brown: Pilgrim\",\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " \"Men's RFID Leather Gift Set Black: Pilgrim\",\n",
+       " 'Ashwood Leather Crossbody Bag Khaki: 64033',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Bordeaux: PH-2',\n",
+       " \"Men's RFID Leather Gift Set Navy: Pilgrim\",\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " \"Women's Medium Leather Wallet Purse Two Tone Tan: S3\",\n",
+       " \"Men's RFID Leather Gift Set Black: Pilgrim\",\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Bag Black: CB-5',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " '14 Card RFID Protected Large Leather Purse Black: S1',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Borduex: SB Buckle',\n",
+       " \"'XSpirit' Leather Crossbody Bag Navy: 63033/CB4\",\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Bordeaux: CB-5',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Bag Cotswold Navy: 64033',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Ice Grey: SB Buckle',\n",
+       " \"Men's RFID Leather Gift Set Black: Pilgrim\",\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " \"Women's Medium Leather Wallet Purse Two Tone Tan: S3\",\n",
+       " 'Ashwood Leather Crossbody Bag Deep Lake: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Navy: CB-5',\n",
+       " 'Ashwood Leather Crossbody Bag Black: CB-5',\n",
+       " 'Ashwood Leather Crossbody Bag Tan: CB-5',\n",
+       " 'Tab Small Zip Top Leather Cross Body Bag Red/Croc',\n",
+       " \"Men's RFID Leather Gift Set Miller Brown: Pilgrim\",\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Rose: 64033',\n",
+       " 'Real Leather Saddle Crossbody Bag Parafin: 63753',\n",
+       " 'Ashwood Leather Crossbody Bag Parafin: 64033',\n",
+       " \"Men's RFID Leather Gift Set Navy: Pilgrim\",\n",
+       " 'Ashwood Leather Crossbody Bag Green: CB-5',\n",
+       " 'Ashwood Ladies Leather Tote Bag Wood Rose: J-12',\n",
+       " 'Mens Leather Washbag Chestnut: GB Milo',\n",
+       " 'Ashwood Real Leather Crossbody Bag:Parafin 62879 ',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Tab Small Zip Top Leather Cross Body Bag Black/Croc',\n",
+       " 'Ashwood Leather Crossbody Bag 2 Tone Tan: 64033',\n",
+       " '14 Card RFID Protected XL Leather Purse Mandarin: S-4',\n",
+       " '14 Card RFID Protected XL Leather Purse Black: S-4',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Green: SB Buckle',\n",
+       " \"'XSpirit' Leather Crossbody Bag Black: 63033/CB4\",\n",
+       " \"'XSpirit' Leather Crossbody Bag Black: 63033/CB4\",\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Parafin: 64033',\n",
+       " \"Men's Leather Gloves Black/grey: GB-525\",\n",
+       " 'Ashwood Leather Crossbody Bag Parafin: 64033',\n",
+       " 'Leather Three Section Cross Body Bag Tan: 63789',\n",
+       " \"'XSpirit' Leather Crossbody Bag Black: 63033/CB4\",\n",
+       " \"Ashwood Leather Women's Tote Crossbody Bag Black: 64064\",\n",
+       " \"Men's Leather Gloves Tan: GB-520\",\n",
+       " 'Ashwood Leather Crossbody Bag Cotswold Navy: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Navy: CB-5',\n",
+       " 'Ashwood Leather Crossbody Bag Rasberry Sorbet: 64033',\n",
+       " 'Tab Small Zip Top Leather Cross Body Bag Bordeaux/Croc',\n",
+       " \"'XSpirit' Leather Crossbody Bag Navy: 63033/CB4\",\n",
+       " \"Men's RFID Leather Gift Set Navy: Pilgrim\",\n",
+       " 'Ashwood Leather Crossbody Bag Cotswold Navy: 64033',\n",
+       " \"Men's Leather Gloves Black: GB-520\",\n",
+       " \"'XSpirit' Leather Crossbody Bag Navy: 63033/CB4\",\n",
+       " 'Ashwood Leather Crossbody Bag Cotswold Navy: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Rose: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Tan: CB-5',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Mens Leather Holdall Weekend Bag Chestnut: Calvin',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Cotswold Navy: 64033',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Cognac: PH-2',\n",
+       " 'Tab Small Zip Top Leather Cross Body Bag Black/Croc',\n",
+       " 'Real Leather Top Zip Crossbody Bag 2 Tone Tan: 63931',\n",
+       " 'Ashwood Leather Crossbody Bag Parafin: 64033',\n",
+       " \"'XSpirit' Leather Crossbody Bag Navy: 63033/CB4\",\n",
+       " 'Mens Leather Backpack Chestnut: GB Jordan',\n",
+       " 'Ashwood Leather Crossbody Bag Ochre Yellow: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Tan: CB-5',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Red: PH-2',\n",
+       " 'Real Leather Top Zip Crossbody Bag 2 Tone Tan: 63931',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Ice Grey: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Ice Grey: SB Buckle',\n",
+       " 'Tab Small Zip Top Leather Cross Body Bag Black/Croc',\n",
+       " 'Ashwood Real Leather Crossbody Bag:Black 62879',\n",
+       " '14 Card RFID Protected XL Leather Purse Two Tone Tan: S2',\n",
+       " 'Ashwood Womens Croc 7 Card Large Leather Purse Green: C-05',\n",
+       " '6 Card RFID Protected Zip Around Leather Purse Denim: S-5',\n",
+       " \"Ashwood Leather Women's Stylish Tote Bag Black: 64198\",\n",
+       " \"Men's RFID Leather Gift Set Navy: Pilgrim\",\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Real Leather Saddle Crossbody Bag 2 Tone Tan: 63753',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag 2 Tone Tan: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag 2 Tone Tan: 64033',\n",
+       " 'Tab Small Zip Top Leather Cross Body Bag Cognac/Croc',\n",
+       " 'Ashwood Leather Crossbody Bag Tan: CB-5',\n",
+       " 'Ashwood Ladies Large Flap Over Leather Shoulder Bag Winter Sky: J-16',\n",
+       " 'Ashwood Leather Crossbody Bag Rasberry Sorbet: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Sodalite Blue: 64033',\n",
+       " 'Real Leather Saddle Crossbody Bag Rose: 63753',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Brown: PH-2',\n",
+       " 'Ashwood Leather Crossbody Bag Green: CB-5',\n",
+       " 'Gabicci Leather 6 Card Billfold Wallet Tan: GB-804',\n",
+       " 'Ashwood Leather Crossbody Bag Tan: CB-5',\n",
+       " 'Ashwood Leather Crossbody Bag 2 Tone Tan: 64033',\n",
+       " 'Ashwood Real Leather Flapover Backpack Cotswold Navy: 64257',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Red: PH-2',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Cognac: PH-2',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Black: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Royal Blue: SB Buckle',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Green: SB Buckle',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Ice Grey: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Cotswold Navy: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Rose: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag 2 Tone Tan: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Cotswold Navy: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Black: 64033',\n",
+       " 'Ashwood Leather Crossbody Bag Ochre Yellow: 64033',\n",
+       " 'Real Leather Tote Bag Rose: 63754',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Red: PH-2',\n",
+       " 'Tab Small Zip Top Leather Cross Body Bag Burgundy/Croc',\n",
+       " 'Ashwood Zip Top Leather Cross Body Bag Green: SB Buckle',\n",
+       " \"Men's RFID Leather Gift Set Navy: Pilgrim\",\n",
+       " 'Leather Three Section Cross Body Bag Tan: 63789',\n",
+       " '7 Card RFID Protected Large Leather Purse Wood Rose: J-52',\n",
+       " \"Ashwood Leather Women's Tote Crossbody Bag Cotwold Navy: 64064\",\n",
+       " \"Women's Leather Shoulder Handbag Black: 63786\",\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Red: PH-2',\n",
+       " 'Ashwood Leather Crossbody Bag Black: CB-5',\n",
+       " 'Vintage Woven Leather Medium 18 Card Purse Black :  D-83',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Bordeaux: PH-2',\n",
+       " 'Mens Leather Washbag Black: GB Milo',\n",
+       " 'Ashwood 4 Card Zip Around Suede and Leather Purse Tan: S-20',\n",
+       " \"Women's Leather Shoulder Handbag Black: 63786\",\n",
+       " \"Men's Leather Gloves Black: GB-530\",\n",
+       " 'Ashwood Leather Crossbody Bag Cotswold Navy: 64033',\n",
+       " 'Ashwood Real Leather Hobo Shoulder Bag 2 Tone Tan: 64203',\n",
+       " 'Ashwood Leather Crossbody Smart Phone Bag - Brown: PH-2',\n",
+       " 'Real Leather Saddle Crossbody Bag Black: 63753',\n",
+       " 'Ashwood Leather Crossbody Bag Parafin: 64033',\n",
+       " \"'Heaven' Real Leather Cross Body Bag\",\n",
+       " \"'Heaven' Real Leather Cross Body Bag\",\n",
+       " \"'Heaven' Real Leather Cross Body Bag\",\n",
+       " \"'XSpirit' Real Leather Crossbody Bag\",\n",
+       " \"'Heaven' Real Leather Cross Body Bag\",\n",
+       " \"'Heaven' Real Leather Cross Body Bag\",\n",
+       " 'Large Real Leather Shoulder Bag Black/tan: 62835',\n",
+       " 'Large Real Leather Shoulder Bag Black/tan: 62835',\n",
+       " \"'XSpirit' Real Leather Crossbody Bag\",\n",
+       " \"'XSpirit' Real Leather Crossbody Bag\",\n",
+       " \"'XSpirit' Real Leather Crossbody Bag\",\n",
+       " 'Ashwood Real Leather Flapover Crossbody Bag Cotswold Navy: 64295',\n",
+       " \"Women's Leather Shoulder Handbag Tan: 63787\",\n",
+       " 'Crocodile Print Cross Body Bag Blush – 62753',\n",
+       " \"'Pretty' Croc Embossed Leather Shoulder Bag\",\n",
+       " 'Real Leather Flapover Quilted Bag Black: 63858']"
+      ]
+     },
+     "execution_count": 329,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df[df['quantity'] == 2]['title'])"
    ]
   },
   {
