--- a/ashwood.ipynb
+++ b/ashwood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\3215136129.py:1: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('jatin.csv', sep=';')\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\3215136129.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_13996\\3608439249.py:1: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('debs orders.csv', sep=';')\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_13996\\3608439249.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df['date'] = pd.to_datetime(df['date'])\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('jatin.csv', sep=';')\n",
+    "df = pd.read_csv('debs orders.csv', sep=';')\n",
     "temp2_df = df['Date created'].str.split('-', expand=True)\n",
     "temp2_df.columns = ['f_', 's_']\n",
     "temp2_df['f_'] = temp2_df['f_'].str.replace('...', '')\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,23 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title:  1435\n",
-      "line:  7332\n",
-      "model:  1435\n",
-      "manufacturer_name:  7332\n",
-      "attribute_summary:  1435\n",
-      "colour:  7482\n",
-      "F_Cat:  7508\n",
-      "S_Cat:  7513\n",
-      "T_Cat:  21539\n",
-      "Category:  7513\n"
+      "title:  1449\n",
+      "line:  7596\n",
+      "model:  1449\n",
+      "manufacturer_name:  7596\n",
+      "attribute_summary:  1449\n",
+      "colour:  7749\n",
+      "F_Cat:  7780\n",
+      "S_Cat:  7785\n",
+      "T_Cat:  22196\n",
+      "Category:  7785\n"
      ]
     }
    ],
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21756, 80)"
+       "(22427, 80)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((3083, 80), (18673, 80))"
+       "((3182, 80), (19245, 80))"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
      "text": [
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\2937461329.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_13996\\2937461329.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "  temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n"
      ]
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "[0 rows x 80 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "[0 rows x 80 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,20 +454,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\4122981288.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_13996\\4122981288.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_null['customs_description'] = df_null['model']\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_10752\\4122981288.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_13996\\4122981288.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -519,24 +519,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title:  1435\n",
-      "line:  7332\n",
-      "model:  1435\n",
-      "manufacturer_name:  7332\n",
-      "attribute_summary:  1435\n",
-      "colour:  7482\n",
-      "F_Cat:  1435\n",
-      "S_Cat:  2044\n",
-      "T_Cat:  21387\n",
-      "Category:  2044\n",
-      "customs_description:  1435\n"
+      "title:  1449\n",
+      "line:  7596\n",
+      "model:  1449\n",
+      "manufacturer_name:  7596\n",
+      "attribute_summary:  1449\n",
+      "colour:  7749\n",
+      "F_Cat:  1449\n",
+      "S_Cat:  2065\n",
+      "T_Cat:  21996\n",
+      "Category:  2065\n",
+      "customs_description:  1449\n"
      ]
     }
    ],
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "4  Ladies > Ladies Jackets & Coats  Ladies > Leather Jackets"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
        "(117, 24)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
